# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/all_text/": {
+        "/all_text": {
             "get": {
                 "description": "do AllTextMusic",
                 "consumes": [
@@ -59,7 +59,7 @@
                 }
             }
         },
-        "/couplet/": {
+        "/couplet": {
             "get": {
                 "description": "do CoupletMusic",
                 "consumes": [
@@ -120,7 +120,7 @@
                 }
             }
         },
-        "/info/": {
+        "/info": {
             "get": {
                 "description": "do InfoMusic",
                 "consumes": [
@@ -175,7 +175,7 @@
                 }
             }
         },
-        "/music/": {
+        "/music": {
             "get": {
                 "description": "do FilterMusic",
                 "consumes": [
@@ -395,7 +395,7 @@
                 }
             }
         },
-        "/text/": {
+        "/text": {
             "get": {
                 "description": "do PaginTextMusic",
                 "consumes": [
